Pequenos ajustes, ocorrência e justificativa tem o "ativo" incorporado em status e ocorrência de saída antecipada precisa de atenção